# isorun

./: .editorconfig  .gitignore  .gitlab-ci.yml  .rubocop.yml  Cargo.toml  Gemfile  Isorun.html  README.md  Rakefile  _index.html  class_list.html  file.README.html  index.html  isorun.gemspec  method_list.html  package.json  top-level-namespace.html  turbo.json
.github/: dependabot.yml
.github/workflows/: docs.yml  gem.yml  tests.yml
Isorun/: App.html  AppHelper.html  AppsHelper.html  Config.html  Context.html  Engine.html  Error.html  Function.html  MissingConfiguration.html  MissingConfigurationBuilderClass.html  Module.html  Renderer.html  Resolver.html  ViteAppHelper.html
Isorun/Config/: AbstractBuilder.html  Builder.html  Option.html  Validations.html
Isorun/Module/: ModuleMissingError.html
benchmarks/: app_bench.rb
docs/: bundle-cache.md  getting-started.md  imports.md  initializer.md  types.md
docs/assets/: logo.sketch  thumbnail.sketch
examples/deno/: package.json  renderer.js
examples/rails/: issue_controller.rb  show.html.erb
examples/rails-app/: Gemfile  Procfile.dev  package.json
examples/rails-d3-app/: Gemfile  package.json
examples/rails-multi-app/: Gemfile  package.json  webpack.config.mjs  webpack.server.config.mjs
examples/rails-react-app/: Gemfile  package.json
examples/rails-react-vite-app/: .gitignore  Gemfile  Procfile.dev  package.json  vite.config.ts
examples/rails-service-app/: Gemfile  Procfile.dev  package.json
examples/rails-vite-app/: .eslintrc.js
examples/rails-vue-app/: Gemfile  Procfile.dev  package.json  tsconfig.json  webpack.config.mjs  webpack.server.config.mjs
examples/vanillajs/: index.js
examples/vuejs/: README.md  package-lock.json  package.json  vite.config.js
examples/vuejs-api/: README.md  package.json
examples/vuejs-list/: README.md  package.json  vite.config.ts
ext/isorun/: Cargo.toml  extconf.rb
ext/isorun/src/: call.js  isorun.rs  lib.rs  render.js  runtime.js
ext/isorun/src/ext/: isorun.rs  mod.rs
ext/isorun/src/isorun/: app.rs  context.rs  function.rs  js_runtime.rs  mod.rs  module.rs  module_item.rs  renderer.rs  runtime.rs  utils.rs  vm.rs
ext/isorun/src/js/: 01-fetch.js  context.rs  mod.rs  module.rs  module_item.rs  worker.rs
gems/isorun/: .rubocop.yml  Gemfile  LICENSE  Rakefile  isorun.gemspec
gems/isorun-native/: .gitignore  .rubocop.yml  Gemfile  Rakefile  isorun-native.gemspec
lib/: isorun.rb
lib/isorun/: app.rb  config.rb  context.rb  (+9 more)
sig/: isorun.rbs
spec/: rails_helper.rb  spec_helper.rb
(+142 files in other folders)
