[package]
name = "isorun"
version = "0.1.12"
edition = "2021"
authors = ["Hannes Moser <box@hannesmoser.at>"]
homepage = "https://github.com/eliias/isorun"
repository = "https://github.com/eliias/isorun"

[dependencies]
deno_console = "0.98.0"
deno_core = "0.180.0"
deno_fetch = "0.125.0"
deno_runtime = "0.106.0"
deno_url = "0.98.0"
deno_web = "0.134.0"
deno_webidl = "0.103.0"
lazy_static = "1.4.0"
magnus = { git = "https://github.com/eliias/magnus", rev = "fdfc70bdb52ea614f6823e55a7fda3122e83d1d4" }
tokio = { version = "1.21.1", features = ["full"] }
v8 = "0.68.0"

[dev-dependencies]
magnus = { git = "https://github.com/eliias/magnus", rev = "fdfc70bdb52ea614f6823e55a7fda3122e83d1d4", features = ["embed"] }

[lib]
name = "isorun"
crate-type = ["cdylib"]
