[package]
name = "isorun"
version = "0.1.13"
edition = "2021"
authors = ["Hannes Moser <box@hannesmoser.at>"]
homepage = "https://github.com/eliias/isorun"
repository = "https://github.com/eliias/isorun"

[dependencies]
deno_console = "0.118.0"
deno_core = "0.204.0"
deno_fetch = "0.145.0"
deno_fs = "0.28.0"
deno_runtime = "0.126.0"
deno_url = "0.136.0"
deno_web = "0.149.0"
deno_webidl = "0.137.0"
lazy_static = "1.5.0"
magnus = { git = "https://github.com/eliias/magnus", rev = "4aef03adf7396a52155ad2ce56ed0f43cdfee040" }
tokio = { version = "1.42.0", features = ["full"] }
v8 = "0.74.3"

[dev-dependencies]
magnus = { git = "https://github.com/eliias/magnus", rev = "4aef03adf7396a52155ad2ce56ed0f43cdfee040", features = ["embed"] }
protoc = "2.28.0"

[lib]
name = "isorun"
crate-type = ["cdylib"]
